fix(ui): show truncated wms info
In the expanded wms query results long paragraphs were being truncated.

Closes #10065

--- a/src/css/details-panel/base.less
+++ b/src/css/details-panel/base.less
@@ -9,6 +9,14 @@
     }
 }
 
+.mfp-content > .overlay-def {
+    overflow-x: hidden;
+}
+
+.mfp-content .modal-body {
+    overflow-x: auto;
+}
+
 .sub-panel-container { // panel that slides out to display more data
     position: fixed;
     overflow-x: hidden;
